# information-security-of-intelligent-systems-master-1sem

./: main.ipynb  make_pdf.sh  pyproject.toml
