[tool.poetry]
name = "information-security-of-intelligent-systems-master-1sem"
version = "0.1.0"
description = ""
authors = ["Valery Verkhoturov <verkhoturov.valery@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
